# heartopia-midi2key

./: CMakeLists.txt  README.md  build.bat
.github/workflows/: cmake-single-platform.yml
config/: heartopia_piano.json
src/: key_emulator.cpp  key_emulator.h  key_mapper.cpp  key_mapper.h  main.cpp  midi_handler.cpp  midi_handler.h
